--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 
             <!--- loading screen container -->
             <div class="sub-container loading-container">
-                <img src="loading.gif" width="150" height="150">
+                <img src="InternetSlowdown_Day.gif" width="150" height="150">
                 <p>Loading</p>
             </div>
 
